--- a/src/app/modules/deadlines/countdown/countdown.component.html
+++ b/src/app/modules/deadlines/countdown/countdown.component.html
@@ -13,7 +13,7 @@
         <p>Redmond, Washington Time - Pacific Daylight Time (PDT)</p>
     </div>
     <div class="lead" *ngIf="!(data.secondsLeft>0)">
-        <p class="text-danger">Deadline Crossed</p>
+        <strong class="text-danger">Deadline Crossed</strong>
     </div>
     <p *ngIf="data.secondsLeft>0">Please wait for 60 seconds countdown for after countdown scenarios</p>
 </div>
